--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
                 </div>
                 <div class="padding-top-50">
                     <h2 class="vtr__title vtr__title--line"><span>Recien agregadas</span></h2>
+                    <div class="vtr__loading">
+                        <img loading="lazy" src="./assets/images/loading.svg" alt="cargando">
+                    </div>
                     <div class="vtr__grid vtr__grid-gap-10 vtr__grid-col-5">
                         <div class="vtr__card">
                             <div class="vtr__card__image">
