add rating plugin

--- a/index.html
+++ b/index.html
@@ -427,13 +427,9 @@
                                        <span class="text">Seguidores</span>
                                    </div>
                                    <div class="popular">
-                                       <div class="boxs">
-                                           <div class="box"></div>
-                                           <div class="box"></div>
-                                           <div class="box"></div>
-                                           <div class="box"></div>
-                                           <div class="box"></div>
-                                       </div>
+                                        <div class="starRatingContainer" data-popular="86.6%">
+                                            <div class="vtr__rating"></div>
+                                        </div>
                                        <span class="text">Popularidad</span>
                                    </div>
                                </div>
@@ -459,13 +455,9 @@
                                        <span class="text">Seguidores</span>
                                    </div>
                                    <div class="popular">
-                                       <div class="boxs">
-                                           <div class="box"></div>
-                                           <div class="box"></div>
-                                           <div class="box"></div>
-                                           <div class="box"></div>
-                                           <div class="box"></div>
-                                       </div>
+                                    <div class="starRatingContainer" data-popular="20%">
+                                        <div class="vtr__rating"></div>
+                                    </div>
                                        <span class="text">Popularidad</span>
                                    </div>
                                </div>
