--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
         <section id="trend" class="vtr__trend bg-purple padding-top padding-bottom">
             <div class="vtr__container">
                 <div class="vtr__advertising">
-                    <img loading="lazy" width="1200" src="./assets/images/image-pub.jpg" alt="publicidad">
+                    <!--<img loading="lazy" width="1200" src="./assets/images/image-pub.jpg" alt="publicidad">-->
+                    <!-- Revive Adserver Etiqueta iFrame - Generated with Revive Adserver v5.3.1 -->
+                    <iframe id='ad9fd84e' name='ad9fd84e' src='http://revive.test:8084/www/delivery/afr.php?zoneid=1&amp;cb=INSERT_RANDOM_NUMBER_HERE' frameborder='0' scrolling='no' width='1200' height='147' allow='autoplay'><a href='http://revive.test:8084/www/delivery/ck.php?n=a0fed1d6&amp;cb=INSERT_RANDOM_NUMBER_HERE' target='_blank'><img src='http://revive.test:8084/www/delivery/avw.php?zoneid=1&amp;cb=INSERT_RANDOM_NUMBER_HERE&amp;n=a0fed1d6' border='0' alt='' /></a></iframe>
+
                 </div>
                 <div class="vtr__flex vtr__flex__space-between padding-top-50">
                     <div class="vtr__col__8">
@@ -129,6 +132,20 @@
                                     <div class="vtr__card__info__top">
                                         <h2 class="title">All i want for christmas is you</h2>
                                         <h3 class="sub-title">Mariah Carey</h3>
+                                    </div>
+                                    <a href="#" class="vtr__card__info__add">
+                                        <img loading="lazy" src="./assets/images/icon-open-plus.svg" alt="imagen">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="vtr__card vtr__card--playlist">
+                                <div class="vtr__card__image">
+                                    <img loading="lazy" src="./assets/images/img4.jpg" alt="imagen">
+                                </div>
+                                <div class="vtr__card__info">
+                                    <div class="vtr__card__info__top">
+                                        <h2 class="title">Yonaguni</h2>
+                                        <h3 class="sub-title">Toto</h3>
                                     </div>
                                     <a href="#" class="vtr__card__info__add">
                                         <img loading="lazy" src="./assets/images/icon-open-plus.svg" alt="imagen">
