add header and footer in page thanks

--- a/gracias.html
+++ b/gracias.html
@@ -11,6 +11,35 @@
     <title>Vive tu ritmo</title>
 </head>
 <body>
+    <header class="vtr__header">
+        <div class="vtr__container">
+            <a class="vtr__header__logo" href="#">
+                <img src="./assets/images/logo.svg" alt="Logo" loading="lazy">
+            </a>
+            <nav class="vtr__header__menu">
+                <ul class="menu">
+                    <li>
+                        <a href="#">Demo link</a>
+                    </li>
+                    <li>
+                        <a href="#">Demo link</a>
+                    </li>
+                    <li>
+                        <a href="#">Demo link</a>
+                    </li>
+                </ul>
+            </nav>
+            <button class="vtr__header__hamburguer">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 60 40">
+                    <g stroke="#fff" stroke-width="3">
+                        <path id="top-line" d="M10,10 L50,10 Z" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"></path>
+                        <path id="middle-line" d="M10,20 L50,20 Z" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"></path>
+                        <path id="bottom-line" d="M10,30 L50,30 Z" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"></path>
+                    </g>
+                </svg>
+            </button>
+        </div>
+    </header>
     <main>
         <section class="vtr__thanks bg-purple">
             <div class="vtr__thanks__content">
@@ -30,6 +59,91 @@
             </div>
         </section>
     </main>
+    <footer class="vtr__footer">
+        <div class="vtr__container">
+            <div class="vtr__grid vtr__grid-gap-20 vtr__grid-col-6">
+                <div class="vtr__item">
+                    <h4>Ed Sheeran</h4>
+                    <ul>
+                        <li><a href="#">Enlace 1</a></li>
+                        <li><a href="#">Enlace 2</a></li>
+                        <li><a href="#">Enlace 3</a></li>
+                        <li><a href="#">Enlace 4</a></li>
+                    </ul>
+                </div>
+                <div class="vtr__item">
+                    <h4>Ed Sheeran</h4>
+                    <ul>
+                        <li><a href="#">Enlace 1</a></li>
+                        <li><a href="#">Enlace 2</a></li>
+                        <li><a href="#">Enlace 3</a></li>
+                        <li><a href="#">Enlace 4</a></li>
+                    </ul>
+                </div>
+                <div class="vtr__item">
+                    <h4>Ed Sheeran</h4>
+                    <ul>
+                        <li><a href="#">Enlace 1</a></li>
+                        <li><a href="#">Enlace 2</a></li>
+                        <li><a href="#">Enlace 3</a></li>
+                        <li><a href="#">Enlace 4</a></li>
+                    </ul>
+                </div>
+                <div class="vtr__item">
+                    <h4>Ed Sheeran</h4>
+                    <ul>
+                        <li><a href="#">Enlace 1</a></li>
+                        <li><a href="#">Enlace 2</a></li>
+                        <li><a href="#">Enlace 3</a></li>
+                        <li><a href="#">Enlace 4</a></li>
+                    </ul>
+                </div>
+                <div class="vtr__item">
+                    <h4>Ed Sheeran</h4>
+                    <ul>
+                        <li><a href="#">Enlace 1</a></li>
+                        <li><a href="#">Enlace 2</a></li>
+                        <li><a href="#">Enlace 3</a></li>
+                        <li><a href="#">Enlace 4</a></li>
+                    </ul>
+                </div>
+                <div class="vtr__item">
+                    <h4>Ed Sheeran</h4>
+                    <ul>
+                        <li><a href="#">Enlace 1</a></li>
+                        <li><a href="#">Enlace 2</a></li>
+                        <li><a href="#">Enlace 3</a></li>
+                        <li><a href="#">Enlace 4</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="vtr__footer__bottom">
+                <p>© 2021 Derechos reservados</p>
+                <ul>
+                    <li>
+                        <a href="#" target="_blank">
+                            <img loading="lazy" src="./assets/images/facebook.svg" alt="imagen">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                            <img loading="lazy" src="./assets/images/twitter.svg" alt="imagen">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                            <img loading="lazy" src="./assets/images/linkedin.svg" alt="imagen">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                            <img loading="lazy" src="./assets/images/whatsapp.svg" alt="imagen">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
