--- a/gracias.html
+++ b/gracias.html
@@ -44,7 +44,7 @@
     <main>
         <section class="vtr__thanks bg-purple">
             <div class="vtr__thanks__content">
-                <h1>¡Gracias Jesus por seguir esta lista!</h1>
+                <h1>¡Gracias por seguir esta lista!</h1>
                 <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Aut nihil porro animi, nesciunt laborum dolores eius ab dignissimos perferendis hic quis dolor dicta, consequuntur repellat accusantium sed! Eaque, optio assumenda?</p>
                 <div class="info">
                     <div class="image">
@@ -149,19 +149,37 @@
     <script>
      $(document).ready(function () {
         const dataTrack = sessionStorage.getItem('data_track');
-        const jsonData = JSON.parse(dataTrack);
-
         console.log(dataTrack);
+        const jsonData = JSON.parse(dataTrack);
+        const {type} = jsonData;
+        if(type === 'main'){
+            const {id, image, name, popularity, followers} = jsonData.data;
+            $(".vtr__thanks__content h1").html("¡Gracias por seguir esta lista!");
+            $(".info .image").attr("src", image);
+            $(".info .title").html(name);
+            $(".info .reproductions").html(followers + " seguidores");
+        } else if (type === 'ranking'){
+            const {id, image, name, artist_all, artist_list_final} = jsonData.data;
+            $(".vtr__thanks__content h1").html("¡Gracias por seguir esta pista!");
+            $(".info .image").attr("src", image);
+            $(".info .title").html(name);
+            $(".info .sub-title").html(artist_list_final);
+            $(".info .reproductions").html(1+ " seguidores");
+        } else if (type === 'trend'){
+            const {id, image, name, artist_all, artist_list_final} = jsonData.data;
+            $(".vtr__thanks__content h1").html("¡Gracias por seguir esta pista!");
+            $(".info .image").attr("src", image);
+            $(".info .title").html(name);
+            $(".info .sub-title").html(artist_list_final);
+            $(".info .reproductions").html(1+ " seguidores");
+        }
 
-        const {id, image, name, popularity, followers} = jsonData.data;
 
-        console.log(image);
-        $(".info .image").attr("src", image);
-        $(".info .title").html(name);
-        $(".info .reproductions").html(followers + " seguidores");
 
         if( dataTrack ){
 
+        } else {
+            //window.location.href =  window.location.protocol+'//'+window.location.host;
         }
 
     })
