--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             <div class="vtr__container">
                 <h2 class="vtr__title vtr__title--line"><span>Nuevos lanzamientos</span></h2>
                 <div id="spt_content" class="vtr__grid vtr__grid-gap-10 vtr__grid-col-5">
-                    <!--
+
                     <div class="vtr__card">
                         <div class="vtr__card__image">
                             <img loading="lazy" src="./assets/images/img8.jpg" alt="imagen">
@@ -759,7 +759,7 @@
                         <div class="vtr__card__bottom">
                             <a href="#" class="button">Agregar a mi lista</a>
                         </div>
-                    </div>-->
+                    </div>
                 </div>
             </div>
         </section>
