--- a/callback.html
+++ b/callback.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex, nofollow">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
@@ -23,7 +24,7 @@ redirect...
         //localStorage.removeItem('redirect_callback')
         //window.location.href = redirect + '?' + separator + window.location.href.split(separator)[1];
     } else {
-        //window.location.href = 'https://ricardomontaner.com';
+        window.location.replace("https://viveturitmo.com");
     }
     /*-------------------------------------------------------------------------------------------------*/
 
